Thu Apr 27 10:55:00 1995  Mark Eichin  <eichin@cygnus.com>

	* krb.h: make INTERFACE, FAR go away for now.
	Drag in the unix time conversion functions for unix only.
	Locally define PROTOTYPE().
	Drag in unix versions of SOCKET macros.
	Recognize DEFINE_SOCKADDR and NEED_TIME_H the way cc-unix.h does.
	Declare krb_ignore_ip_address.
	Define DEB() to support non-printf debugging.
	Declare errno.
	Define key_proc_type and decrypt_tkt_type.
	* prot.h: add KERB_ERR_PREAUTH_SHORT and _MISMATCH from Cygnus
	extensions.
	* krbports.h: new file, has default ports for V4 services for
	hard-coded fallback.
	* lsb_addr_cmp.h: from V4, handles the mutant comparison
	functions needed for the V4 "direction" comparison. (Rename
	of lsb_addr_comp.h due to filename length.)

Tue Mar 14 16:53:37 1995    <tytso@rsx-11.mit.edu>

	* Makefile.in: Delete definitions defined in pre/config.in.

Wed Mar  1 17:59:19 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kadm.h: Remove declaration of malloc() and realloc().

Fri Feb  3 06:50:46 1995  Theodore Y. Ts'o  (tytso@dcl)

	* krb.h: Add changes to make this work on Alpha's.  (From Ezra).

Wed Jan 25 19:25:02 1995  Mark Eichin  (eichin@cygnus.com)

	* kadm.h: add DEL_ENT and DEL_ACL for CNS V4 delete support.

Fri Nov 18 01:24:58 1994  Mark Eichin  <eichin@cygnus.com>

	* Makefile.in (install): use $(INSTALL_DATA) instead of cp. Elide
	dependency in install rule so $(srcdir) works.
	* configure.in: use AC_PROG_INSTALL.

Fri Nov 18 00:17:03 1994  Mark Eichin  <eichin@cygnus.com>

	* configure.in: add WITH_CCOPTS.

Mon Oct  3 18:50:25 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: make install obey $(DESTDIR)

	* Makefile.in: Fix "make install" to use $(srcdir) when copying in
		header files.
