@@ -1,3 +1,11 @@
+Thu Apr 27 13:32:22 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
+
+	* conf-osf1alpha.h: New file
+
+	* osconf.h: Add inclusion of conf-osf1alpha.h
+
+	* krb.h: Add const to krb_err_txt to agree with library definition
+
 Thu Apr 27 10:55:00 1995  Mark Eichin  <eichin@cygnus.com>
 
 	* krb.h: make INTERFACE, FAR go away for now.
